src/objects/Survey__c.object
<CustomObject>
    <fields>
        <fullName>Portion_Pad_Not_Stick__c</fullName>
        <description>What portion of the pad did not stick?</description>
        <inlineHelpText>What portion of the pad did not stick?</inlineHelpText>
        <label>Portion Pad Not Stick</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Front</fullName>
                </value>
                <value>
                    <fullName>Back</fullName>
                </value>
                <value>
                    <fullName>Wings</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Working__c</fullName>
        <description>Is the product still working?</description>
        <inlineHelpText>Is the product still working?</inlineHelpText>
        <label>Product Working</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Purchase_Channel__c</fullName>
        <description>Purchase Channel</description>
        <inlineHelpText>Purchase Channel</inlineHelpText>
        <label>Purchase Channel</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Online</fullName>
                </value>
                <value>
                    <fullName>Physical Store</fullName>
                </value>
                <value>
                    <fullName>Not Applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residue_Location__c</fullName>
        <description>Where was residue left?</description>
        <inlineHelpText>Where was residue left?</inlineHelpText>
        <label>Residue Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Washing Machine</fullName>
                </value>
                <value>
                    <fullName>Fabric</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Both washing machine &amp; fabric</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reward_Gift_French__c</fullName>
        <description>Which Pampers rewards gift did you choose?</description>
        <inlineHelpText>Which Pampers rewards gift did you choose?</inlineHelpText>
        <label>Reward Gift French</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>100 x Tirage Classic 11x15cm Photobox</fullName>
                </value>
                <value>
                    <fullName>2€. de réduction lingettes Pampers</fullName>
                </value>
                <value>
                    <fullName>2€. de réduction Pampers New Baby</fullName>
                </value>
                <value>
                    <fullName>2 mois d’abonnement à BabyTV Android</fullName>
                </value>
                <value>
                    <fullName>2 mois d’abonnement à BabyTV iOS</fullName>
                </value>
                <value>
                    <fullName>3€. de réduction Pampers Active Fit</fullName>
                </value>
                <value>
                    <fullName>3€ de réduction Pampers Baby-Dry Pants</fullName>
                </value>
                <value>
                    <fullName>30 Cartes Souvenirs Milestone™- Bébé</fullName>
                </value>
                <value>
                    <fullName>30 Cartes Souvenirs Milestone™- Junior</fullName>
                </value>
                <value>
                    <fullName>50 x Tirage Classic 11x15cm Photobox</fullName>
                </value>
                <value>
                    <fullName>Abonnement à Pomme d&apos;api Magazine</fullName>
                </value>
                <value>
                    <fullName>Abonnement à Popi Magazine</fullName>
                </value>
                <value>
                    <fullName>Abonnement à Tralalire Magazine</fullName>
                </value>
                <value>
                    <fullName>Album Photo Strass Arthur Price</fullName>
                </value>
                <value>
                    <fullName>Arbre Empilable Le Toy Van</fullName>
                </value>
                <value>
                    <fullName>Ardoise Magique Megasketcher - Tomy</fullName>
                </value>
                <value>
                    <fullName>Autre</fullName>
                </value>
                <value>
                    <fullName>Bulldozer Empilable Le Toy Van</fullName>
                </value>
                <value>
                    <fullName>Cadre Rond Pour Petite Fille Cherish Me</fullName>
                </value>
                <value>
                    <fullName>Cadre Rond Pour Petit Garçon Cherish Me</fullName>
                </value>
                <value>
                    <fullName>Calendrier Mural Simple A4 Photobox</fullName>
                </value>
                <value>
                    <fullName>Coque Smartphone simple Photobox</fullName>
                </value>
                <value>
                    <fullName>Cosmopolitan Magazine (Format Poche)</fullName>
                </value>
                <value>
                    <fullName>Cubes – Bois Joli Le Toy Van</fullName>
                </value>
                <value>
                    <fullName>Double Cadre Photo en Argent</fullName>
                </value>
                <value>
                    <fullName>Elle Magazine</fullName>
                </value>
                <value>
                    <fullName>Famili Magazine</fullName>
                </value>
                <value>
                    <fullName>Glamour Magazine</fullName>
                </value>
                <value>
                    <fullName>Le Train De La Famille Lapin Le Toy Van</fullName>
                </value>
                <value>
                    <fullName>Livre Photo Prestige A4 Paysage Photobox</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reward_Gift_German__c</fullName>
        <description>Which Pampers rewards gift did you choose?</description>
        <inlineHelpText>Which Pampers rewards gift did you choose?</inlineHelpText>
        <label>Reward Gift German</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>1,00€ Coupon für Pampers Feuchttücher</fullName>
                </value>
                <value>
                    <fullName>10-Euro-Gutschein von JAKO-O</fullName>
                </value>
                <value>
                    <fullName>3,00€¬ Coupon für Pampers Windeln</fullName>
                </value>
                <value>
                    <fullName>50-Euro-Gutschein von JAKO-O</fullName>
                </value>
                <value>
                    <fullName>5-Euro-Gutschein von JAKO-O</fullName>
                </value>
                <value>
                    <fullName>Andere</fullName>
                </value>
                <value>
                    <fullName>Bilder-Box (25 Fotos)</fullName>
                </value>
                <value>
                    <fullName>Brigitte Magazin - 3 Monate Abo</fullName>
                </value>
                <value>
                    <fullName>DRK Spende</fullName>
                </value>
                <value>
                    <fullName>Eltern Magazin - 12 Monate Abo</fullName>
                </value>
                <value>
                    <fullName>Eltern Magazin - 3 Monate Abo</fullName>
                </value>
                <value>
                    <fullName>Eltern Magazin - 6 Monate Abo</fullName>
                </value>
                <value>
                    <fullName>Fotobuch Hardcover A4, 28 Seiten</fullName>
                </value>
                <value>
                    <fullName>Foto-Grußkarten, 5 Stück, Hochglanz</fullName>
                </value>
                <value>
                    <fullName>Fotokalender 2017, A4 Hochformat</fullName>
                </value>
                <value>
                    <fullName>Foto-Leinwand 30 x 20 cm</fullName>
                </value>
                <value>
                    <fullName>Foto-Poster 60 x 40 cm</fullName>
                </value>
                <value>
                    <fullName>Fotos 10 x 15 cm, 100 Abzüge, seidenmatt</fullName>
                </value>
                <value>
                    <fullName>Fotos 10 x 15 cm, 25 Abzüge, seidenmatt</fullName>
                </value>
                <value>
                    <fullName>Gala Magazin - 3 Monate Abo</fullName>
                </value>
                <value>
                    <fullName>GEO Mini Magazin - 6 Monate Abo</fullName>
                </value>
                <value>
                    <fullName>Haba Entdeckerzug Pfiffikus</fullName>
                </value>
                <value>
                    <fullName>Haba Ringelrei</fullName>
                </value>
                <value>
                    <fullName>Haba Stapelspiel Regenbogen-Hochhaus</fullName>
                </value>
                <value>
                    <fullName>Haba Steckspiel Blumengarten</fullName>
                </value>
                <value>
                    <fullName>Raupe Nimmersatt Kuschel-Badehandtuch</fullName>
                </value>
                <value>
                    <fullName>RTL Spende</fullName>
                </value>
                <value>
                    <fullName>Spende 1Stunde Betreuung durch wellcome</fullName>
                </value>
                <value>
                    <fullName>Tomy Megasketcher Classic</fullName>
                </value>
                <value>
                    <fullName>Tomy Octo Plantschis schwimmende</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reward_Gift__c</fullName>
        <description>Which Pampers rewards gift did you choose?</description>
        <inlineHelpText>Which Pampers rewards gift did you choose?</inlineHelpText>
        <label>Reward Gift</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>£2 off Pampers New Baby Jumbo Pack</fullName>
                </value>
                <value>
                    <fullName>£3 off Baby Dry Pants Jumbo+ Pack</fullName>
                </value>
                <value>
                    <fullName>£3 off Pampers Active Fit Jumbo+ Pack</fullName>
                </value>
                <value>
                    <fullName>£3 off Pampers Baby Dry Jumbo+ Pack</fullName>
                </value>
                <value>
                    <fullName>£3 off Pampers New Baby Jumbo Pack</fullName>
                </value>
                <value>
                    <fullName>£4 off Baby Dry Pants Jumbo+ Pack</fullName>
                </value>
                <value>
                    <fullName>£4 off Pampers Active Fit Jumbo+ Pack</fullName>
                </value>
                <value>
                    <fullName>£4 off Pampers Baby Dry Jumbo+ Pack</fullName>
                </value>
                <value>
                    <fullName>£5 off Baby Dry Pants Jumbo+ Pack</fullName>
                </value>
                <value>
                    <fullName>£5 off Pampers Active Fit Jumbo+ Pack</fullName>
                </value>
                <value>
                    <fullName>£5 off Pampers Baby Dry Jumbo+ Pack</fullName>
                </value>
                <value>
                    <fullName>100 Standard 6 x 4 Photo Prints</fullName>
                </value>
                <value>
                    <fullName>30 Baby Cards by Milestone™</fullName>
                </value>
                <value>
                    <fullName>30 Toddler cards by Milestone™</fullName>
                </value>
                <value>
                    <fullName>50 Standard 6 x 4 Photo Prints</fullName>
                </value>
                <value>
                    <fullName>A4 Personalised Hardcover Photobook</fullName>
                </value>
                <value>
                    <fullName>AdventureBox - 12 month subscription</fullName>
                </value>
                <value>
                    <fullName>Arthur Price Cherish Me Boys Round Frame</fullName>
                </value>
                <value>
                    <fullName>Arthur Price Cherish Me Girl Rnd Frame</fullName>
                </value>
                <value>
                    <fullName>Arthur Price Diamante Photo Album</fullName>
                </value>
                <value>
                    <fullName>Arthur Price Double Photo Frame</fullName>
                </value>
                <value>
                    <fullName>Baby-Dry Monthly pack Size 5, Pack of 144</fullName>
                    <label>Baby-Dry Monthly pk of 144 Sz 5</label>
                </value>
                <value>
                    <fullName>BabyTV Mobile for 2 Months - Android app</fullName>
                </value>
                <value>
                    <fullName>BabyTV Mobile for 2 Months - iOS app</fullName>
                </value>
                <value>
                    <fullName>British Skin Foundation Charity Donation</fullName>
                </value>
                <value>
                    <fullName>Bulldozer Stacker, Le Toy Van</fullName>
                </value>
                <value>
                    <fullName>Bunny Train, Le Toy Van</fullName>
                </value>
                <value>
                    <fullName>Child&apos;s Play Books 50% Discount Offer</fullName>
                </value>
                <value>
                    <fullName>Classic Collage Canvas 30cmx20cm</fullName>
                </value>
                <value>
                    <fullName>Cube Set-Forest Themed, Le Toy Van</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scent_Issue__c</fullName>
        <description>When did you first notice the scent issue?</description>
        <inlineHelpText>When did you first notice the scent issue?</inlineHelpText>
        <label>Scent Issue</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Before washing – When opening the package</fullName>
                </value>
                <value>
                    <fullName>After washing - When opening the washing machine</fullName>
                </value>
                <value>
                    <fullName>After washing -  When removing fabrics from washing machine</fullName>
                </value>
                <value>
                    <fullName>During drying – When hanging wet fabrics to line dry</fullName>
                </value>
                <value>
                    <fullName>During drying - When putting wet fabrics in tumble dryer</fullName>
                </value>
                <value>
                    <fullName>After drying - When collecting fabrics from line drying</fullName>
                </value>
                <value>
                    <fullName>After drying - When taking fabrics out of the tumble dryer</fullName>
                </value>
                <value>
                    <fullName>After drying - When ironing</fullName>
                </value>
                <value>
                    <fullName>After drying - When storing fabrics in the cupboard</fullName>
                </value>
                <value>
                    <fullName>After drying -  When wearing the fabrics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Scratch_Logo_Off__c</fullName>
        <description>Lightly scratch the Oral-B logo with a coin. Does the logo come off?</description>
        <inlineHelpText>Lightly scratch the Oral-B logo with a coin. Does the logo come off?</inlineHelpText>
        <label>Scratch Logo Off</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sideseam_Torn__c</fullName>
        <description>Where did the product tear, was it a clean tear or did the edges look jagged?</description>
        <inlineHelpText>Where did the product tear, was it a clean tear or did the edges look jagged?</inlineHelpText>
        <label>Sideseam Torn</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sideseam_uneven__c</fullName>
        <description>Does the seam stick out further on one side than the other side?</description>
        <inlineHelpText>Does the seam stick out further on one side than the other side?</inlineHelpText>
        <label>Sideseam uneven</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Smells_Like__c</fullName>
        <description>Please describe what it smells like:</description>
        <inlineHelpText>Please describe what it smells like:</inlineHelpText>
        <label>Smells Like</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sour Milk</fullName>
                </value>
                <value>
                    <fullName>Wet cloth</fullName>
                </value>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Wet Dog</fullName>
                </value>
                <value>
                    <fullName>Musty</fullName>
                </value>
                <value>
                    <fullName>Onions</fullName>
                </value>
                <value>
                    <fullName>Stale</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Spray_Air_Freshener__c</fullName>
        <description>Did the spray of your air freshener:</description>
        <inlineHelpText>Did the spray of your air freshener:</inlineHelpText>
        <label>Spray Air Freshener</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gradually become weaker each time you used it</fullName>
                </value>
                <value>
                    <fullName>Suddenly change in one use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stain_Color_Laundry__c</fullName>
        <description>Describe the color of the stain</description>
        <inlineHelpText>Describe the color of the stain</inlineHelpText>
        <label>Stain Color - Laundry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Purple</fullName>
                </value>
                <value>
                    <fullName>Orange</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stain_Type_APC__c</fullName>
        <description>Describe type of stain not removed</description>
        <inlineHelpText>Describe type of stain not removed</inlineHelpText>
        <label>Stain Type - APC</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grease; oil</fullName>
                </value>
                <value>
                    <fullName>Hard water minerals</fullName>
                </value>
                <value>
                    <fullName>Mold; mildew</fullName>
                </value>
                <value>
                    <fullName>Road salt; dirt; mud</fullName>
                </value>
                <value>
                    <fullName>Soap scum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stain_Type_Laundry__c</fullName>
        <description>Can you describe the type of stain the product didn&apos;t remove?</description>
        <inlineHelpText>Can you describe the type of stain the product didn&apos;t remove?</inlineHelpText>
        <label>Stain Type - Laundry</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Grease</fullName>
                </value>
                <value>
                    <fullName>Outdoor</fullName>
                </value>
                <value>
                    <fullName>Food/Beverages</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stain_color_Oral_Care__c</fullName>
        <description>Describe the color of the stain</description>
        <inlineHelpText>Describe the color of the stain</inlineHelpText>
        <label>Stain Color - Oral Care</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Blue</fullName>
                </value>
                <value>
                    <fullName>Green</fullName>
                </value>
                <value>
                    <fullName>Brown</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The Status of the Survey.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                    <default>true</default>
                    <label>Incomplete</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Survey_Fieldset__c</fullName>
        <formula>Metadata_Survey_Trigger__r.Survey_Fieldset__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Survey Fieldset</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Survey_Type__c</fullName>
        <description>Type of survey</description>
        <inlineHelpText>Type of survey</inlineHelpText>
        <label>Survey Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ad hoc</fullName>
                </value>
                <value>
                    <fullName>Probing Questions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Toothpaste_Type__c</fullName>
        <description>Which toothpaste do you use most often with this product?</description>
        <inlineHelpText>Which toothpaste do you use most often with this product?</inlineHelpText>
        <label>Toothpaste Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Type_of_Machine__c</fullName>
        <description>Can you describe the type of machine you used this product with?</description>
        <inlineHelpText>Can you describe the type of machine you used this product with?</inlineHelpText>
        <label>Type of Machine</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Standard Top Load Washing Machine</fullName>
                </value>
                <value>
                    <fullName>Front Load HE Washing</fullName>
                </value>
                <value>
                    <fullName>Top Load HE Washing</fullName>
                </value>
                <value>
                    <fullName>Alternative uses (hand wash, pre-treat, other cleaning uses)</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Use_shave_products__c</fullName>
        <description>Do you use any shave preparations or after shaves?</description>
        <inlineHelpText>Do you use any shave preparations or after shaves?</inlineHelpText>
        <label>Use shave products</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <description>Is this a consumer or professional?</description>
        <inlineHelpText>Is this a consumer or professional?</inlineHelpText>
        <label>User Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consumer</fullName>
                </value>
                <value>
                    <fullName>Professional</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Type__c</fullName>
        <description>Can you describe the type of vehicle you&apos;re using this product in? (make and model)</description>
        <inlineHelpText>Can you describe the type of vehicle you&apos;re using this product in? (make and model)</inlineHelpText>
        <label>Vehicle Type</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Website_Details__c</fullName>
        <description>probing questions needed to capture security breach incidents</description>
        <inlineHelpText>What website did this occur?</inlineHelpText>
        <label>Website Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>When_noticed__c</fullName>
        <description>When did you notice the issue?</description>
        <inlineHelpText>When did you notice the issue?</inlineHelpText>
        <label>When noticed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Before Use</fullName>
                </value>
                <value>
                    <fullName>During Use</fullName>
                </value>
                <value>
                    <fullName>After Use</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Wide_Sideseam__c</fullName>
        <description>Do you remember if one side of the underwear has wider side seams than the other?</description>
        <inlineHelpText>Do you remember if one side of the underwear has wider side seams than the other?</inlineHelpText>
        <label>Wide Sideseam</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Wing_Location__c</fullName>
        <description>If the product has wings, where are the wings located? For example, are the wings located in the middle of pad OR towards the front of the pad?</description>
        <inlineHelpText>If the product has wings, where are the wings located? For example, are the wings located in the middle of pad OR towards the front of the pad?</inlineHelpText>
        <label>Wing Location</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Middle of pad</fullName>
                </value>
                <value>
                    <fullName>Toward front of pad</fullName>
                </value>
                <value>
                    <fullName>Product not available / not sure</fullName>
                </value>
                <value>
                    <fullName>Product does not have wings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Survey</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>Has_Data__c</columns>
        <columns>Case_Comment_Code__c</columns>
        <columns>Case_Product__c</columns>
        <columns>Survey_Fieldset__c</columns>
        <columns>Survey_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{000000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Surveys</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>